src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-dwP0.25-dhP0.5-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault column width: P0.25\ndefault window height: P0.5\nborder on\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]

post-map configures:
size: 292 × 328, bounds: 1240 × 680, states: []
size: 292 × 328, bounds: 1240 × 680, states: [Activated]
